--- a/RAEdit/C/RAEdit.cbp
+++ b/RAEdit/C/RAEdit.cbp
@@ -13,6 +13,7 @@
 				<Option compiler="gcc" />
 				<Compiler>
 					<Add option="-O2" />
+					<Add option="-Wno-unused" />
 				</Compiler>
 				<Linker>
 					<Add option="-s" />
@@ -22,10 +23,53 @@
 		<Compiler>
 			<Add option="-Wall" />
 		</Compiler>
+		<Unit filename="Block.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="ClipBoard.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="Data.c">
+			<Option compilerVar="CC" />
+		</Unit>
 		<Unit filename="Data.h" />
+		<Unit filename="DragDrop.h" />
+		<Unit filename="DragDrop.inc" />
+		<Unit filename="Edit.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="Function.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="Memory.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="Misc.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="Paint.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="Position.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="RAEdit.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="RAEdit.cbp" />
+		<Unit filename="RAEdit.depend" />
+		<Unit filename="RAEditDll.c">
+			<Option compilerVar="CC" />
+		</Unit>
 		<Unit filename="RegisterTypes.h" />
+		<Unit filename="Undo.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="inc2h.depend" />
+		<Unit filename="inc2h.exe" />
+		<Unit filename="inc2h.layout" />
 		<Unit filename="include/RAEdit.h" />
-		<Unit filename="main.cpp" />
+		<Unit filename="test.cpp" />
 		<Extensions>
 			<code_completion />
 			<envvars />
