--- a/RAEdit/C/RAEdit.cbp
+++ b/RAEdit/C/RAEdit.cbp
@@ -13,7 +13,7 @@
 				<Option compiler="gcc" />
 				<Compiler>
 					<Add option="-O2" />
-					<Add option="-Wno-unused" />
+					<Add option="-Wno-unused -W" />
 				</Compiler>
 				<Linker>
 					<Add option="-s" />
@@ -33,7 +33,9 @@
 			<Option compilerVar="CC" />
 		</Unit>
 		<Unit filename="Data.h" />
-		<Unit filename="DragDrop.h" />
+		<Unit filename="DragDrop.c">
+			<Option compilerVar="CC" />
+		</Unit>
 		<Unit filename="DragDrop.inc" />
 		<Unit filename="Edit.c">
 			<Option compilerVar="CC" />
